import webcharts 0.2.0 and add style examples

--- a/index.html
+++ b/index.html
@@ -13,4 +13,11 @@
 <tr><td style="padding-left: 1em"><a href="performance/intensity-graph.html">Intensity graph</a></td></tr>
 <tr><td style="padding-left: 1em"><a href="performance/scatter_graph.html">Scatter graph</a></td></tr>
 </tbody></table>
+
+<h1>Webcharts styling</h1>
+<table><tbody>
+<tr><td style="padding-left: 1em"><a href="examples/graph.html">Graph</a></td></tr>
+<tr><td style="padding-left: 1em"><a href="examples/graph_dark.html">Graph dark</a></td></tr>
+</tbody></table>
+
 </body></html>
