--- a/performance/chart.html
+++ b/performance/chart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Webcharts Chart performance test</title>
-    <link rel="stylesheet" href="../Styles/niControlStyles.css" />
+    <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
     <link rel="import" href="../node_modules/ni-webcharts/dist/webcharts.min.html"/>
     <script type="text/javascript" src="../node_modules/webcomponents-lite/webcomponents-lite.js"></script>
 
