--- a/examples/graph.html
+++ b/examples/graph.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webcharts Graph performance test</title>
+    <title>Webcharts Graph</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
     <link rel="import" href="../node_modules/ni-webcharts/dist/webcharts.min.html"/>
     <script type="text/javascript" src="../node_modules/webcomponents-lite/webcomponents-lite.js"></script>
@@ -27,16 +27,16 @@
 <body>
     <h1>Webcharts Graph</h1>
 
-    <h2>Array of numbers</h2>
-    <ni-cartesian-graph id="graph1" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Time" axis-position="bottom" auto-scale></ni-cartesian-axis>
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
+    <h2>Arrays of numbers</h2>
+    <ni-cartesian-graph id="graph1" value="[[0, 10, 200, 3, 40, 500, 6, 70, 800], [1, 20, 600, 40, 5]]">
+      <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks show-label label="Time" axis-position="bottom" auto-scale grid-lines></ni-cartesian-axis>
+      <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks show-label label="Amplitude" axis-position="left" auto-scale grid-lines></ni-cartesian-axis>
       <ni-cartesian-plot show label="Plot 1">
-        <ni-cartesian-plot-renderer line-width="2" line-stroke="#a84716"></ni-cartesian-plot-renderer>
+        <ni-cartesian-plot-renderer line-width="1.5" line-stroke="#82A3D1"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cursor label="Cursor 1" show show-label snap-to-data cursor-color="#10e357"></ni-cursor>
-    </ni-cartesian-graph>
-
-  <script defer type="text/javascript" src="graphing_with_cursor.js"></script>
+      <ni-cartesian-plot show label="Plot 2">
+        <ni-cartesian-plot-renderer line-width="1.5" line-stroke="#862323"></ni-cartesian-plot-renderer>
+      </ni-cartesian-plot>
+  </ni-cartesian-graph>
 </body>
 </html>
