--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
   </head>
   <body>
 <h1>Webcharts performance</h1>
-<table><tbody>
-<tr><td style="padding-left: 1em"><a href="performance/chart.html">Chart</a></td></tr>
-<tr><td style="padding-left: 1em"><a href="performance/graph_analogWaveform.html">Graph with analog waveforms</a></td></tr>
-<tr><td style="padding-left: 1em"><a href="performance/graph.html">Graph</a></td></tr>
-<tr><td style="padding-left: 1em"><a href="performance/intensity-graph.html">Intensity graph</a></td></tr>
-<tr><td style="padding-left: 1em"><a href="performance/scatter_graph.html">Scatter graph</a></td></tr>
-</tbody></table>
+    <table><tbody>
+        <tr><td style="padding-left: 1em"><a href="performance/chart.html">Chart</a></td></tr>
+        <tr><td style="padding-left: 1em"><a href="performance/graph_analogWaveform.html">Graph with analog waveforms</a></td></tr>
+        <tr><td style="padding-left: 1em"><a href="performance/graph.html">Graph</a></td></tr>
+        <tr><td style="padding-left: 1em"><a href="performance/intensity-graph.html">Intensity graph</a></td></tr>
+        <tr><td style="padding-left: 1em"><a href="performance/scatter_graph.html">Scatter graph</a></td></tr>
+    </tbody></table>
 
 <h1>Webcharts styling</h1>
-<table><tbody>
-<tr><td style="padding-left: 1em"><a href="examples/graph.html">Graph</a></td></tr>
-<tr><td style="padding-left: 1em"><a href="examples/graph_dark.html">Graph dark</a></td></tr>
-</tbody></table>
+    <table><tbody>
+        <tr><td style="padding-left: 1em"><a href="examples/graph.html">Graph</a></td></tr>
+        <tr><td style="padding-left: 1em"><a href="examples/graph_dark.html">Graph dark</a></td></tr>
+    </tbody></table>
+
+<h1>Webcharts examples</h1>
+    <table><tbody>
+        <tr><td style="padding-left: 1em"><a href="examples/vostok.html">CO2 and temperature</a></td></tr>
+    </tbody></table>
 
 </body></html>
