--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style>
 
+    <link rel="stylesheet" href="cards.css" />
     <meta name="viewport" content="width=device-width">
     <title>Webcharts performance</title>
   </head>
   <body>
-<h1>Webcharts performance</h1>
-    <table><tbody>
-        <tr><td style="padding-left: 1em"><a href="performance/chart.html">Chart</a></td></tr>
-        <tr><td style="padding-left: 1em"><a href="performance/graph_analogWaveform.html">Graph with analog waveforms</a></td></tr>
-        <tr><td style="padding-left: 1em"><a href="performance/graph.html">Graph</a></td></tr>
-        <tr><td style="padding-left: 1em"><a href="performance/intensity-graph.html">Intensity graph</a></td></tr>
-        <tr><td style="padding-left: 1em"><a href="performance/scatter_graph.html">Scatter graph</a></td></tr>
-    </tbody></table>
-
-<h1>Webcharts styling</h1>
-    <table><tbody>
-        <tr><td style="padding-left: 1em"><a href="examples/graph.html">Graph</a></td></tr>
-        <tr><td style="padding-left: 1em"><a href="examples/graph_dark.html">Graph dark</a></td></tr>
-    </tbody></table>
-
-<h1>Webcharts examples</h1>
-    <table><tbody>
-        <tr><td style="padding-left: 1em"><a href="examples/vostok.html">CO2 and temperature</a></td></tr>
-    </tbody></table>
-
+    <H1 style="text-align:center;">Webcharts test drive</H1>
+    <div id="mainbox">
+        <div class="card">
+            <h2>Webcharts performance</h2>
+                <table><tbody>
+                    <tr><td style="padding-left: 1em"><a href="performance/chart.html">Chart</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="performance/graph_analogWaveform.html">Graph with analog waveforms</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="performance/graph.html">Graph</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="performance/intensity-graph.html">Intensity graph</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="performance/scatter_graph.html">Scatter graph</a></td></tr>
+                </tbody></table>
+        </div>
+        <div class="card">
+            <h2>Webcharts styling</h2>
+                <table><tbody>
+                    <tr><td style="padding-left: 1em"><a href="examples/graph.html">Graph</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="examples/graph_dark.html">Graph dark</a></td></tr>
+                </tbody></table>
+        </div>
+        <div class="card">
+            <h2>Webcharts examples</h2>
+                <table><tbody>
+                    <tr><td style="padding-left: 1em"><a href="examples/vostok.html">CO2 and temperature</a></td></tr>
+                </tbody></table>
+        </div>
+    </div>
 </body></html>
