add icons to cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <H1 style="text-align:center;">Webcharts test drive</H1>
     <div id="mainbox">
         <div class="card">
+            <img src="line-chart.svg">
             <h2>Webcharts performance</h2>
                 <table><tbody>
                     <tr><td style="padding-left: 1em"><a href="performance/chart.html">Chart</a></td></tr>
@@ -19,6 +20,7 @@
                 </tbody></table>
         </div>
         <div class="card">
+            <img src="css3.svg">
             <h2>Webcharts styling</h2>
                 <table><tbody>
                     <tr><td style="padding-left: 1em"><a href="examples/graph.html">Graph</a></td></tr>
@@ -26,6 +28,7 @@
                 </tbody></table>
         </div>
         <div class="card">
+            <img src="flask.svg">
             <h2>Webcharts examples</h2>
                 <table><tbody>
                     <tr><td style="padding-left: 1em"><a href="examples/vostok.html">CO2 and temperature</a></td></tr>
