add audio example

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h2>Webcharts examples</h2>
                 <table><tbody>
                     <tr><td style="padding-left: 1em"><a href="examples/vostok.html">CO2 and temperature</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="examples/audio-graph.html">Audio waveform: Doctor Who theme</a></td></tr>
                 </tbody></table>
         </div>
     </div>
