use webcharts 0.3.2 and pass typed arrays to the graph in the audio example

--- a/examples/audio-graph.html
+++ b/examples/audio-graph.html
@@ -35,13 +35,13 @@
             used musique concrète techniques to realise a score written by composer Ron Grainer.
         </P>
         <ni-cartesian-graph id="graph" value="[]">
-            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks show-label label="Samples" axis-position="bottom" auto-scale grid-lines></ni-cartesian-axis>
-            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks show-label label="Amplitude" axis-position="left" minimum="-1" maximum="1" grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks label="Samples" axis-position="bottom" auto-scale grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks label="Amplitude" axis-position="left" minimum="-1" maximum="1" grid-lines></ni-cartesian-axis>
             <ni-cartesian-plot show label="left">
-                <ni-cartesian-plot-renderer line-width="1.5" line-stroke="#b65353"></ni-cartesian-plot-renderer>
+                <ni-cartesian-plot-renderer line-width="1" line-stroke="#b65353"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
             <ni-cartesian-plot show label="right">
-                <ni-cartesian-plot-renderer line-width="1.5" line-stroke="#7293C1"></ni-cartesian-plot-renderer>
+                <ni-cartesian-plot-renderer line-width="1" line-stroke="#7293C1"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
         </ni-cartesian-graph>
         <P>
