newest webcharts anf fix examples broken due to an API change

--- a/examples/audio-graph.html
+++ b/examples/audio-graph.html
@@ -27,16 +27,16 @@
 
         <h1>Webcharts: Doctor Who theme (1963)</h1>
 
-        <P> The original 1963 recording of the Doctor Who theme music is widely
+        <p> The original 1963 recording of the Doctor Who theme music is widely
             regarded as a significant and innovative piece of electronic music,
             recorded well before the availability of commercial synthesisers.
-        </P>
-        <P> Delia Derbyshire (assisted by Dick Mills) of the BBC Radiophonic Workshop
+        </p>
+        <p> Delia Derbyshire (assisted by Dick Mills) of the BBC Radiophonic Workshop
             used musique concrète techniques to realise a score written by composer Ron Grainer.
-        </P>
+        </p>
         <ni-cartesian-graph id="graph" value="[]">
-            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks label="Samples" axis-position="bottom" auto-scale grid-lines></ni-cartesian-axis>
-            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks label="Amplitude" axis-position="left" minimum="-1" maximum="1" grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks label="Samples" show-label axis-position="bottom" auto-scale grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks label="Amplitude" show-label axis-position="left" minimum="-1" maximum="1" grid-lines></ni-cartesian-axis>
             <ni-cartesian-plot show label="left">
                 <ni-cartesian-plot-renderer line-width="1" line-stroke="#b65353"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
@@ -44,22 +44,22 @@
                 <ni-cartesian-plot-renderer line-width="1" line-stroke="#7293C1"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
         </ni-cartesian-graph>
-        <P>
+        <p>
             Each note was individually created by cutting, splicing, speeding up
             and slowing down segments of analogue tape containing recordings of a
             single plucked string, white noise, and the simple harmonic waveforms
             of test-tone oscillators which were used for calibrating equipment and
             rooms, not creating music.
-        </P>
-        <P>
+        </p>
+        <p>
             The main, pulsing bassline rhythm was created
             from a recording of a single plucked string, played over and over again
             in different patterns created by splicing copies of the sound, with
             different pitches and notes achieved by playing the sample in different speeds.
-        </P>
-        <P>
+        </p>
+        <p>
             Read more <a href = "https://en.wikipedia.org/wiki/Doctor_Who_theme_music">here (wikipedia)</a>
-        </P>
+        </p>
     </div>
 
     <script defer type="text/javascript" src="audio-graph.js"></script>
