--- a/performance/intensity-graph.html
+++ b/performance/intensity-graph.html
@@ -28,8 +28,8 @@
     <h1>Webcharts Intensity Graph performance</h1>
 
     <ni-intensity-graph id="graph1">
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Time" axis-position="bottom" auto-scale></ni-cartesian-axis>
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" auto-scale></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
       <ni-color-scale show> </ni-color-scale>
   </ni-intensity-graph>
 
