--- a/examples/vostok.html
+++ b/examples/vostok.html
@@ -43,9 +43,9 @@
             of webcharts.
         </P>
         <ni-cartesian-graph id="graph1" value="[]">
-            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks show-label label="Time (years before present)" axis-position="bottom" auto-scale></ni-cartesian-axis>
-            <ni-cartesian-axis show show-tick-labels show-ticks show-minor-ticks show-label label="Temperature variations (&#176; C)" axis-position="left" auto-scale grid-lines></ni-cartesian-axis>
-            <ni-cartesian-axis axis-ref = "CO2" show show-tick-labels show-ticks show-minor-ticks show-label label="CO2 (ppmv)" axis-position="right" auto-scale></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time (years before present)" axis-position="bottom" auto-scale></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Temperature variations (&#176; C)" axis-position="left" auto-scale grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis axis-ref = "CO2" show show-ticks show-minor-ticks show-label label="CO2 (ppmv)" axis-position="right" auto-scale></ni-cartesian-axis>
             <ni-cartesian-plot show label="Temperature">
                 <ni-cartesian-plot-renderer line-width="1.5"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
