--- a/performance/graph with cursor.html
+++ b/performance/graph with cursor.html
@@ -29,8 +29,8 @@
 
     <h2>Array of numbers</h2>
     <ni-cartesian-graph id="graph1" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Time" axis-position="bottom" auto-scale></ni-cartesian-axis>
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" auto-scale></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
       <ni-cartesian-plot show label="Plot 1">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#a84716"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
