--- a/performance/graph_analogWaveform.html
+++ b/performance/graph_analogWaveform.html
@@ -27,8 +27,8 @@
 <body>
     <h2>AnalogWaveform Graph</h2>
     <ni-cartesian-graph id="graph" value="[]">
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Time" axis-position="bottom" auto-scale format="LVTime"></ni-cartesian-axis>
-      <ni-cartesian-axis show show-tick-labels grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" auto-scale format="LVTime"></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
       <ni-cartesian-plot show label="Plot 1">
         <ni-cartesian-plot-renderer line-width="1" line-stroke="#a84716"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
