Patching the examples

--- a/performance/intensity-graph.html
+++ b/performance/intensity-graph.html
@@ -28,9 +28,9 @@
     <h1>Webcharts Intensity Graph performance</h1>
 
     <ni-intensity-graph id="graph1">
-      <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" auto-scale></ni-cartesian-axis>
-      <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
-      <ni-color-scale show> </ni-color-scale>
+      <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom"></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left"></ni-cartesian-axis>
+      <ni-color-scale show  markers='[{"value":0,"color":"rgba(0,0,0,1)"},{"value":0.5,"color":"rgba(0,0,255,1)"},{"value":1,"color":"rgba(255,255,255,1)"}]'> </ni-color-scale>
   </ni-intensity-graph>
 
     <div id="settings">
