--- a/examples/audio-graph.html
+++ b/examples/audio-graph.html
@@ -35,8 +35,8 @@
             used musique concrète techniques to realise a score written by composer Ron Grainer.
         </p>
         <ni-cartesian-graph id="graph" value="[]">
-            <ni-cartesian-axis show show-ticks show-minor-ticks label="Samples" show-label axis-position="bottom" auto-scale grid-lines></ni-cartesian-axis>
-            <ni-cartesian-axis show show-ticks show-minor-ticks label="Amplitude" show-label axis-position="left" minimum="-1" maximum="1" grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks label="Samples" show-label axis-position="bottom" grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks label="Amplitude" show-label axis-position="left" auto-scale="none" minimum="-1" maximum="1" grid-lines></ni-cartesian-axis>
             <ni-cartesian-plot show label="left">
                 <ni-cartesian-plot-renderer line-width="1" line-stroke="#b65353"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
