--- a/examples/graph_dark.html
+++ b/examples/graph_dark.html
@@ -29,8 +29,8 @@
 
     <h2>Arrays of numbers</h2>
     <ni-cartesian-graph id="graph1" value="[[0, 10, 200, 3, 40, 500, 6, 70, 800], [1, 20, 600, 40, 5]]">
-      <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time" axis-position="bottom" auto-scale grid-lines></ni-cartesian-axis>
-      <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Amplitude" axis-position="left" auto-scale grid-lines></ni-cartesian-axis>
+      <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time" axis-position="bottom" grid-lines></ni-cartesian-axis>
+      <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Amplitude" axis-position="left" grid-lines></ni-cartesian-axis>
       <ni-cartesian-plot show label="Plot 1">
         <ni-cartesian-plot-renderer line-width="1.5" line-stroke="#82A3D1"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
