import latest version of webcharts

--- a/examples/vostok.html
+++ b/examples/vostok.html
@@ -33,19 +33,19 @@
     <div id="page-wrap">
         <h1>Vostok ice core temperatures and CO2 concentrations</h1>
 
-        <P>
+        <p>
             This graph shows CO2 concentrations and temperatures measured from
             the ice core driled from the Vostok site in Antarctica spanning an
             interval of 420 thousand years.
-        </P>
-        <P>
+        </p>
+        <p>
             It is also demonstating the multiple axis and multiple plots abilities
             of webcharts.
-        </P>
+        </p>
         <ni-cartesian-graph id="graph1" value="[]">
-            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time (years before present)" axis-position="bottom" auto-scale></ni-cartesian-axis>
-            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Temperature variations (&#176; C)" axis-position="left" auto-scale grid-lines></ni-cartesian-axis>
-            <ni-cartesian-axis axis-ref = "CO2" show show-ticks show-minor-ticks show-label label="CO2 (ppmv)" axis-position="right" auto-scale></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time (years before present)" axis-position="bottom"></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Temperature variations (&#176; C)" axis-position="left" grid-lines></ni-cartesian-axis>
+            <ni-cartesian-axis axis-ref = "CO2" show show-ticks show-minor-ticks show-label label="CO2 (ppmv)" axis-position="right"></ni-cartesian-axis>
             <ni-cartesian-plot show label="Temperature">
                 <ni-cartesian-plot-renderer line-width="1.5"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
@@ -53,13 +53,13 @@
                 <ni-cartesian-plot-renderer line-width="1.5"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
         </ni-cartesian-graph>
-        <P>
+        <p>
             The sources of the data that powers this graph are:
-                <UL>
-                    <LI><a href="https://www.ncdc.noaa.gov/cdo/f?p=519:1:::::P1_study_id:2426">Vostok - Deuterium Data and Temperature Reconstruction</a></LI>
-                    <LI><a href="https://www.ncdc.noaa.gov/cdo/f?p=519:1:::::P1_study_id:2442">Vostok - Carbon Dioxide Data</a></LI>
-                </UL>
-        </P>
+                <ul>
+                    <li><a href="https://www.ncdc.noaa.gov/cdo/f?p=519:1:::::P1_study_id:2426">Vostok - Deuterium Data and Temperature Reconstruction</a></li>
+                    <li><a href="https://www.ncdc.noaa.gov/cdo/f?p=519:1:::::P1_study_id:2442">Vostok - Carbon Dioxide Data</a></li>
+                </ul>
+        </p>
     </div>
 
     <script type="text/javascript" src="./data/vostok_time.js"></script>
