--- a/performance/scatter_graph.html
+++ b/performance/scatter_graph.html
@@ -28,8 +28,8 @@
     <h1>Webcharts Graph performance</h1>
 
     <ni-cartesian-graph id="graph1" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
-      <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" auto-scale></ni-cartesian-axis>
-      <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" auto-scale></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" ></ni-cartesian-axis>
+      <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" ></ni-cartesian-axis>
       <ni-cartesian-plot show label="Plot 1">
         <ni-cartesian-plot-renderer line-stroke='' point-shape='cross' point-color="#d6c100"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
