add a card for documentation

--- a/index.html
+++ b/index.html
@@ -35,5 +35,13 @@
                     <tr><td style="padding-left: 1em"><a href="examples/audio-graph.html">Audio waveform: Doctor Who theme</a></td></tr>
                 </tbody></table>
         </div>
+        <div class="card">
+            <img src="book.svg">
+            <h2>Developer documentation</h2>
+                <table><tbody>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts/docs/API.md#webcharts-reference">webcharts API</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts/docs/styling.md#styling-the-webcharts">Styling webcharts with css</a></td></tr>
+                </tbody></table>
+        </div>
     </div>
 </body></html>
