--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -50,8 +50,8 @@
         </p>
         <ni-cartesian-graph id="graph1" ni-control-id="28" value="[]">
             <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time" axis-position="bottom"></ni-cartesian-axis>
-            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Strain" axis-position="left" grid-lines></ni-cartesian-axis>
-            <ni-cartesian-axis axis-ref = "L" show show-ticks show-minor-ticks show-label label="Strain" axis-position="right"></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Strain" axis-position="left" grid-lines format="LVSI"></ni-cartesian-axis>
+            <ni-cartesian-axis axis-ref = "L" show show-ticks show-minor-ticks show-label label="Strain" axis-position="right" format="LVSI"></ni-cartesian-axis>
             <ni-cartesian-plot show label="Hanford Observatory">
                 <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
