--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -101,7 +101,7 @@
                 appReady = typeof graph.updateData === 'function';
 
             if (!appReady) {
-                setTimeout(loadData);
+                setTimeout(loadData, 5);
                 return;
             }
 
@@ -120,7 +120,7 @@
             });
         };
 
-        setTimeout(loadData);
+        setTimeout(loadData, 5);
 
     </script>
 </body>
