Latest and greatest versions

--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
     <link rel="stylesheet" href="../node_modules/jqwidgets-framework/jqwidgets/styles/jqx.base.css" />
     <link rel="stylesheet" href="../node_modules/jqwidgets-framework/jqwidgets/styles/jqx.fresh.css" />
-    <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/niIconStyles.css" />
-    <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/niControlStyles.css" />
+    <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.icons.css" />
+    <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.css" />
 
     <link rel="import" href="../node_modules/ni-webcharts-legends/dist/webcharts-legends.min.html"/>
 
